Fixed continuation size in .editorconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,7 @@ indent_size=2
 [*.java]
 indent_style=space
 indent_size=4
+continuation_indent_size=8
 
 [{jshint.json,*.jshintrc}]
 indent_style=space
