--- a/services/github-service-impl/pom.xml
+++ b/services/github-service-impl/pom.xml
@@ -28,6 +28,11 @@
       <artifactId>catapult-service-github-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.eclipse.jgit</groupId>
+      <artifactId>org.eclipse.jgit</artifactId>
+      <version>4.6.0.201612231935-r</version>
+    </dependency>
+    <dependency>
       <groupId>org.arquillian.container</groupId>
       <artifactId>arquillian-container-chameleon</artifactId>
       <scope>test</scope>
