--- a/web/pom.xml
+++ b/web/pom.xml
@@ -28,6 +28,10 @@
       <groupId>org.kontinuity.catapult</groupId>
       <artifactId>catapult-core-impl</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.kontinuity.catapult</groupId>
+      <artifactId>catapult-service-keycloak-impl</artifactId>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
