--- a/base/pom.xml
+++ b/base/pom.xml
@@ -3,14 +3,14 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>catapult-parent</artifactId>
-    <groupId>org.kontinuity.catapult</groupId>
+    <artifactId>missioncontrol-parent</artifactId>
+    <groupId>io.openshift.appdev.missioncontrol</groupId>
     <version>1.0.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>catapult-base</artifactId>
+  <artifactId>missioncontrol-base</artifactId>
 
   <build>
     <plugins>
