--- a/core/core-api/pom.xml
+++ b/core/core-api/pom.xml
@@ -3,25 +3,25 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.kontinuity.catapult</groupId>
-    <artifactId>catapult-parent</artifactId>
+    <groupId>io.openshift.appdev.missioncontrol</groupId>
+    <artifactId>missioncontrol-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
-  <artifactId>catapult-core-api</artifactId>
+  <artifactId>missioncontrol-core-api</artifactId>
 
   <dependencies>
     <dependency>
-      <groupId>org.kontinuity.catapult</groupId>
-      <artifactId>catapult-base</artifactId>
+      <groupId>io.openshift.appdev.missioncontrol</groupId>
+      <artifactId>missioncontrol-base</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.kontinuity.catapult</groupId>
-      <artifactId>catapult-service-github-api</artifactId>
+      <groupId>io.openshift.appdev.missioncontrol</groupId>
+      <artifactId>missioncontrol-service-github-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.kontinuity.catapult</groupId>
-      <artifactId>catapult-service-openshift-api</artifactId>
+      <groupId>io.openshift.appdev.missioncontrol</groupId>
+      <artifactId>missioncontrol-service-openshift-api</artifactId>
     </dependency>
   </dependencies>
 
