--- a/services/github-service-impl/pom.xml
+++ b/services/github-service-impl/pom.xml
@@ -3,17 +3,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.kontinuity.catapult</groupId>
-    <artifactId>catapult-parent</artifactId>
+    <groupId>io.openshift.appdev.missioncontrol</groupId>
+    <artifactId>missioncontrol-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
-  <artifactId>catapult-service-github-impl</artifactId>
+  <artifactId>missioncontrol-service-github-impl</artifactId>
 
   <dependencies>
     <dependency>
-      <groupId>org.kontinuity.catapult</groupId>
-      <artifactId>catapult-base</artifactId>
+      <groupId>io.openshift.appdev.missioncontrol</groupId>
+      <artifactId>missioncontrol-base</artifactId>
     </dependency>
     <dependency>
       <groupId>org.kohsuke</groupId>
@@ -24,8 +24,8 @@
       <artifactId>okhttp-urlconnection</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.kontinuity.catapult</groupId>
-      <artifactId>catapult-service-github-api</artifactId>
+      <groupId>io.openshift.appdev.missioncontrol</groupId>
+      <artifactId>missioncontrol-service-github-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jgit</groupId>
