--- a/services/openshift-service-api/pom.xml
+++ b/services/openshift-service-api/pom.xml
@@ -3,17 +3,17 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>catapult-service-openshift-api</artifactId>
+  <artifactId>missioncontrol-service-openshift-api</artifactId>
   <parent>
-    <groupId>org.kontinuity.catapult</groupId>
-    <artifactId>catapult-parent</artifactId>
+    <groupId>io.openshift.appdev.missioncontrol</groupId>
+    <artifactId>missioncontrol-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <dependencies>
     <dependency>
-      <groupId>org.kontinuity.catapult</groupId>
-      <artifactId>catapult-base</artifactId>
+      <groupId>io.openshift.appdev.missioncontrol</groupId>
+      <artifactId>missioncontrol-base</artifactId>
     </dependency>
   </dependencies>
 </project>
