--- a/services/openshift-service-impl/pom.xml
+++ b/services/openshift-service-impl/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.kontinuity.catapult</groupId>
-    <artifactId>catapult-parent</artifactId>
+    <groupId>io.openshift.appdev.missioncontrol</groupId>
+    <artifactId>missioncontrol-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
-  <artifactId>catapult-service-openshift-impl</artifactId>
+  <artifactId>missioncontrol-service-openshift-impl</artifactId>
 
   <properties>
     <logback-classic.version>1.0.13</logback-classic.version>
@@ -17,8 +17,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.kontinuity.catapult</groupId>
-      <artifactId>catapult-base</artifactId>
+      <groupId>io.openshift.appdev.missioncontrol</groupId>
+      <artifactId>missioncontrol-base</artifactId>
     </dependency>
     <dependency>
       <groupId>io.fabric8</groupId>
@@ -29,8 +29,8 @@
       <artifactId>kubernetes-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.kontinuity.catapult</groupId>
-      <artifactId>catapult-service-openshift-api</artifactId>
+      <groupId>io.openshift.appdev.missioncontrol</groupId>
+      <artifactId>missioncontrol-service-openshift-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.arquillian.container</groupId>
@@ -38,8 +38,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.kontinuity.catapult</groupId>
-      <artifactId>catapult-base</artifactId>
+      <groupId>io.openshift.appdev.missioncontrol</groupId>
+      <artifactId>missioncontrol-base</artifactId>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
