added to overview page and start on create

--- a/services/openshift-service-impl/src/main/resources/pipeline-template.yml
+++ b/services/openshift-service-impl/src/main/resources/pipeline-template.yml
@@ -2,6 +2,11 @@ apiVersion: v1
 kind: Template
 metadata:
   name: pipeline
+  annotations:
+    description: 'This template creates a Build Configuration that uses a Jenkins pipeline
+      strategy. '
+    iconClass: icon-jenkins
+    tags: instant-app,jenkins
 parameters:
 - name: PROJECT
   description: The name assigned to all of the application objects defined in this template.
@@ -16,7 +21,12 @@ objects:
   kind: BuildConfig
   metadata:
     name: ${PROJECT}
+    annotations:
+      pipeline.alpha.openshift.io/uses: '[{"name": "jenkins", "namespace": "", "kind":
+        "DeploymentConfig"}]'
   spec:
+    triggers:
+    - type: ConfigChange
     source:
       git:
         ref: master
