Issue #217 Rely on our own Jenkins slave
Lock down the build environment by creating an ImageStream that can be used by the Jenkins k8s CLoud plugin as a valid slave.  Jenkinsfiles may now reference node "launchpad-maven" to use this known environment for builds

--- a/services/openshift-service-impl/src/main/resources/pipeline-template.yml
+++ b/services/openshift-service-impl/src/main/resources/pipeline-template.yml
@@ -36,3 +36,13 @@ objects:
       jenkinsPipelineStrategy:
         jenkinsfilePath: Jenkinsfile
       type: JenkinsPipeline
+- apiVersion: v1
+  kind: ImageStream
+  metadata:
+    name: launchpad-maven
+    annotations:
+      openshift.io/display-name: 'Jenkins 2 CentOS 7'
+    labels:
+      role: jenkins-slave
+  spec:
+    dockerImageRepository: openshift/jenkins-slave-maven-centos7
