--- a/services/openshift-service-impl/src/main/resources/pipeline-template.yml
+++ b/services/openshift-service-impl/src/main/resources/pipeline-template.yml
@@ -16,6 +16,13 @@ parameters:
   description: The source URL for the application
   displayName: Source URL
   required: true
+- name: GITHUB_WEBHOOK_SECRET
+  description: A secret string used to configure the GitHub webhook.
+  displayName: GitHub Webhook Secret
+  required: true
+  from: '[a-zA-Z0-9]{40}'
+  generate: expression
+
 objects:
 - apiVersion: v1
   kind: BuildConfig
@@ -27,6 +34,9 @@ objects:
   spec:
     triggers:
     - type: ConfigChange
+    - type: GitHub
+      github:
+        secret: "${GITHUB_WEBHOOK_SECRET}"
     source:
       git:
         ref: master
