#223 Do not push changes automatically when releasing

--- a/pom.xml
+++ b/pom.xml
@@ -340,6 +340,13 @@
               <serverId>ossrh</serverId>
             </configuration>
           </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-release-plugin</artifactId>
+            <configuration>
+              <pushChanges>false</pushChanges>
+            </configuration>
+          </plugin>
         </plugins>
       </build>
     </profile>
