Upgrades to OkHttp 3.6.0 (same version used by kubernetes-api)

--- a/services/keycloak-service-impl/pom.xml
+++ b/services/keycloak-service-impl/pom.xml
@@ -19,7 +19,7 @@
       <artifactId>missioncontrol-service-keycloak-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.squareup.okhttp</groupId>
+      <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp-urlconnection</artifactId>
     </dependency>
     <dependency>
