--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <version.io.fabric8_openshift-client>2.2.13</version.io.fabric8_openshift-client>
     <version.io.fabric8_kubernetes-api>2.2.209</version.io.fabric8_kubernetes-api>
     <version.com.fasterxml.jackson>2.7.7</version.com.fasterxml.jackson>
-    <version.com.squareup.okhttp>2.7.5</version.com.squareup.okhttp>
+    <version.com.squareup.okhttp>3.6.0</version.com.squareup.okhttp>
     <version.org.jboss.arquillian.extension_arquillian-phantom-driver>1.2.1.Final</version.org.jboss.arquillian.extension_arquillian-phantom-driver>
     <version.ch.qos.logback_logback-classic>1.0.13</version.ch.qos.logback_logback-classic>
     <version.org.assertj_assertj-core>3.4.1</version.org.assertj_assertj-core>
@@ -203,22 +203,17 @@
         <version>${version.com.fasterxml.jackson}</version>
       </dependency>
       <dependency>
-        <groupId>com.squareup.okhttp</groupId>
+        <groupId>com.squareup.okhttp3</groupId>
         <artifactId>okhttp-urlconnection</artifactId>
         <version>${version.com.squareup.okhttp}</version>
       </dependency>
       <dependency>
-        <groupId>com.squareup.okhttp</groupId>
+        <groupId>com.squareup.okhttp3</groupId>
         <artifactId>logging-interceptor</artifactId>
         <version>${version.com.squareup.okhttp}</version>
       </dependency>
       <dependency>
-        <groupId>com.squareup.okhttp</groupId>
-        <artifactId>okhttp-ws</artifactId>
-        <version>${version.com.squareup.okhttp}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.squareup.okhttp</groupId>
+        <groupId>com.squareup.okhttp3</groupId>
         <artifactId>okhttp</artifactId>
         <version>${version.com.squareup.okhttp}</version>
       </dependency>
