--- a/services/github-service-impl/pom.xml
+++ b/services/github-service-impl/pom.xml
@@ -19,7 +19,7 @@
       <artifactId>github-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.squareup.okhttp</groupId>
+      <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp-urlconnection</artifactId>
     </dependency>
     <dependency>
