--- a/services/github-service-impl/pom.xml
+++ b/services/github-service-impl/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.openshift.appdev.missioncontrol</groupId>
     <artifactId>missioncontrol-parent</artifactId>
-    <version>3</version>
+    <version>4-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>missioncontrol-service-github-impl</artifactId>
