--- a/services/openshift-service-api/pom.xml
+++ b/services/openshift-service-api/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.openshift.appdev.missioncontrol</groupId>
     <artifactId>missioncontrol-parent</artifactId>
-    <version>7</version>
+    <version>8-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <dependencies>
