--- a/services/openshift-service-impl/pom.xml
+++ b/services/openshift-service-impl/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.openshift.appdev.missioncontrol</groupId>
     <artifactId>missioncontrol-parent</artifactId>
-    <version>7</version>
+    <version>8-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>missioncontrol-service-openshift-impl</artifactId>
