--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>missioncontrol-parent</artifactId>
     <groupId>io.openshift.appdev.missioncontrol</groupId>
-    <version>7</version>
+    <version>8-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
