--- a/core/core-impl/pom.xml
+++ b/core/core-impl/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>io.openshift.appdev.missioncontrol</groupId>
     <artifactId>missioncontrol-parent</artifactId>
-    <version>8</version>
+    <version>9-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>missioncontrol-core-impl</artifactId>
