--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>io.openshift.appdev.missioncontrol</groupId>
   <artifactId>missioncontrol-parent</artifactId>
-  <version>8</version>
+  <version>9-SNAPSHOT</version>
   <packaging>pom</packaging>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -55,7 +55,7 @@
     <connection>scm:git:git://github.com/openshiftio/launchpad-missioncontrol.git</connection>
     <developerConnection>scm:git:git@github.com:openshiftio/launchpad-missioncontrol.git</developerConnection>
     <url>http://github.com/openshiftio/launchpad-missioncontrol</url>
-    <tag>v8</tag>
+    <tag>HEAD</tag>
   </scm>
   <distributionManagement>
     <snapshotRepository>
