--- a/services/keycloak-service-impl/pom.xml
+++ b/services/keycloak-service-impl/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.openshift.appdev.missioncontrol</groupId>
     <artifactId>missioncontrol-parent</artifactId>
-    <version>8</version>
+    <version>9-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>missioncontrol-service-keycloak-impl</artifactId>
